correct z-index;

--- a/htdocs/layout/css/csrdelft.css
+++ b/htdocs/layout/css/csrdelft.css
@@ -26,7 +26,7 @@ body{
 
 .dragobject{
 	position: fixed;
-	z-index: 111;
+	z-index: 50;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -125,7 +125,7 @@ ul.nobullets li{ list-style-type: none; }
 	display: none;
 	position: fixed;
 	width: 500px;
-	z-index: 11;
+	z-index: 200;
 	padding: 50px;
 	background-color: white;/*
 	background-image: url("http://plaetjes.csrdelft.nl/layout/beeldmerk.jpg");
@@ -139,7 +139,7 @@ ul.nobullets li{ list-style-type: none; }
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 10;
+	z-index: 100;
 	opacity: 0.5;
 	background-color: black;/*
 	background-image: url("http://plaetjes.csrdelft.nl/layout/loading_bar_black.gif");*/
@@ -311,7 +311,7 @@ ul.nobullets li{ list-style-type: none; }
 	position: relative; 
 	left: -82px; top: 2px;
 	width: 200px;
-	z-index: 99;
+	z-index: 50;
 	border: 1px solid white; 
 	background-color: #3262D7;
 	padding: 5px;
@@ -371,6 +371,7 @@ ul.nobullets li{ list-style-type: none; }
 
 /**** ZIJKOLOM *******************************************************************/
 #zijkolom{
+	z-index: 50;
 	overflow: hidden;
 	width: 185px;
 }
@@ -476,7 +477,7 @@ div.hoverIntentContent{
 	-moz-box-shadow: 0 0 11px #000000;
 	-webkit-box-shadow: 0 0 11px #000000;
 	box-shadow: 0 0 11px #000000;
-	z-index: 111;
+	z-index: 250;
 	font-weight: normal !important;
 	font-style: normal !important;
 	float: none !important;
